[package]
name = "luckycoincore-rpc"
version = "0.16.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
]
license = "CC0-1.0"
homepage = "https://github.com/GeraldoNonKYC/rust-luckycoincore-rpc/"
repository = "https://github.com/GeraldoNonKYC/rust-luckycoincore-rpc/"
description = "RPC client library for the Luckycoin Core JSON-RPC API."
keywords = ["crypto", "luckycoin", "luckycoin-core", "rpc"]
readme = "README.md"
edition = "2018"

[lib]
name = "luckycoincore_rpc"
path = "src/lib.rs"

[dependencies]
luckycoincore-rpc-json = { version = "0.16.0", path = "../json" }

log = "0.4.5"
jsonrpc = "0.13.0"

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"
