[package]
name = "luckycoincore-rpc-json"
version = "0.16.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
license = "CC0-1.0"
homepage = "https://github.com/GeraldoNonKYC/rust-luckycoincore-rpc/"
repository = "https://github.com/GeraldoNonKYC/rust-luckycoincore-rpc/"
description = "JSON-enabled type structs for luckycoincore-rpc crate."
keywords = [ "crypto", "luckycoin", "luckycoin-core", "rpc" ]
readme = "README.md"
edition = "2018"

[lib]
name = "luckycoincore_rpc_json"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

bitcoin = { version = "0.29.0", features = ["serde"]}
